--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -17,6 +17,7 @@
   "components/File/File.njk",
   "components/FormGroup/FormGroup.njk",
   "components/Group/Group.njk",
+  "components/Hidden/Hidden.njk",
   "components/Input/Input.njk",
   "components/Inset/Inset.njk",
   "components/Notice/Notice.njk",
