--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -11,6 +11,7 @@
   "components/Control/Control.njk",
   "components/ControlLabel/ControlLabel.njk",
   "components/ControlError/ControlError.njk",
+  "components/Date/Date.njk",
   "components/DependsAria/DependsAria.njk",
   "components/DependsHidden/DependsHidden.njk",
   "components/Fieldset/Fieldset.njk",
