--- a/app/templates/form/form.html
+++ b/app/templates/form/form.html
@@ -14,7 +14,7 @@
 {{ ErrorSummary(errors) }}
 <form method="post">
 {{ super() }}
-<div class="xform-group form-submit"><input class="button next validation-submit" type="submit" value="Save and continue"></div>
+<div class="xform-group form-submit"><input class="button {% if route.start %}button-start {% endif %}next validation-submit" type="submit" value="Save and continue"></div>
 {% if route.multiple_counter %}
 {% set addValue = 1 %}
 {% if autofields[route.multiple_counter] %}{% set addValue = autofields[route.multiple_counter] %}{% endif %}
