--- a/app/components/Fieldset/Fieldset.njk
+++ b/app/components/Fieldset/Fieldset.njk
@@ -1,6 +1,6 @@
 {% from '../ControlError/ControlError.njk' import ControlError with context %}
 {% from '../Group/Group.njk' import Group with context %}
-{% macro Fieldset(name, label='', sublabel='', inline='', blocks='', group='', visually_hidden=true, error='') %}
+{% macro Fieldset(name, content='', label='', sublabel='', inline='', blocks='', group='', visually_hidden=false, error='') %}
 {% set label = getFormattedProp(name, 'label', { value: label }) %}
 {% set sublabel = getFormattedProp(name, 'sublabel', { value: sublabel }) %}
 {% set inline = getBlockProp(name, 'inline', { value: inline }) %}
@@ -12,7 +12,7 @@
   <p>{{ sublabel | safe }}</p>
   {% endif %}#}
   <fieldset{% if inline %} class="inline"{% endif %}>
-    <legend{% if visually_hidden %} class="xvisuallyhidden"{% endif %}>
+    <legend{% if visually_hidden %} class="visuallyhidden"{% endif %}>
     <span class="form-label-bold">{{ label | safe }}</span>
       {% if sublabel %}
       <span class="form-sublabel">{{ sublabel | safe }}</span>
@@ -24,6 +24,9 @@
     {% endif %}
     {{ ControlError(name, error) }}
     </legend>
+  {% if content %}
+    {{ content | safe }}
+  {% endif %}
   {% if caller %}
     {{ caller() }}
   {% endif %}
