--- a/app/components/Control/Control.njk
+++ b/app/components/Control/Control.njk
@@ -3,6 +3,7 @@
 {% if outputControl %}
 {% set _blockType = getBlockProp(name, '_blockType', 'Text', { value: _blockType }) %}
 {% if Block[_blockType] %}
+{% if flowchart %}<!-- CONTROL.njk={{name}} -->{% endif %}
 {{ Block[_blockType](name, value=value, error=error, label=label, sublabel=sublabel, hint=hint, heading=heading, inline=inline, depth=depth) }}
 {% else %}<p>NO SUCH MACRO :{{ _blockType }}:</p>{% endif %}
 {% endif %}
