--- a/app/components/RadioGroup/RadioGroup.njk
+++ b/app/components/RadioGroup/RadioGroup.njk
@@ -1,7 +1,7 @@
 {% from '../Fieldset/Fieldset.njk' import Fieldset with context %}
 {% from '../OptionLabel/OptionLabel.njk' import OptionLabel with context %}
 {% from '../SubBlock/SubBlock.njk' import SubBlock with context %}
-{% macro RadioGroup(name, inline='', reveals='', visually_hidden=true, or=false) %}
+{% macro RadioGroup(name, inline='', reveals='', visually_hidden=true, or=false, options='') %}
 {% set prefixedName = name %}
 {% if route._prefix %}{% set prefixedName = route._prefix + prefixedName %}{% endif %}
 {% set error = getError(prefixedName) %}
@@ -21,17 +21,22 @@
       {% endif %}
       {% if checkReveals(name, option.value) %}{% set hasOptionReveals = true %}{% endif %}
     {% endfor %} #}
-    {% for option_name in getBlockProp(name, 'options') %}
+    {% if not options %}
+      {% set options = getBlockProp(name, 'options') %}
+    {% endif %}
+    {% for option_name in options %}
       {% if option_name.value %}
         {% set option = option_name %}
       {% else %}
         {% set option = getBlock(option_name) %}
       {% endif %}
-      {% set checked = false %}
+      {% set checked = option.checked %}
+      {% if getValue and checkReveals %}
       {% if option.value === getValue(prefixedName) %}
         {% set checked = true %}
       {% endif %}
       {% set optionReveals = checkReveals(prefixedName, option.value) %}
+      {% endif %}
       {# {% if option.value === 'yes' %}{{ optionReveals }}{% endif %} #}
       {#{% if excludes %}
         {% for val in excludes %}
