--- a/app/templates/flowchart/flowchart.html
+++ b/app/templates/flowchart/flowchart.html
@@ -282,12 +282,13 @@ Wizard flow - Prototype
 {% endblock %}
 
 {% block content %}
+{% set stepRoute = routesFlattened[route.wizard] %}
+{% set stepUrl = getRouteUrl(stepRoute.id) %}
 <div id="container">
 <div class="box-row">
 <div class="box">
 <div class="innerbox" data-block-name="{{stepRoute.id}}">
-{% set stepRoute = routesFlattened[route.wizard] %}
-<p class="routeKey">{{stepRoute.id}} <small><a href="{{ getRouteUrl(stepRoute.id) }}">{{ getRouteUrl(stepRoute.id) }}</a> <a href="{{ getRouteUrl(stepRoute.id) }}/edit">(edit)</a></small></p>
+<p class="routeKey">{{stepRoute.id}} <small><a href="{{ stepUrl }}">{{ stepUrl }}</a> <a href="{{ stepUrl }}{% if stepUrl != '/' %}/{% endif %}edit">(edit)</a></small></p>
 {{ Block.PageHeader(stepRoute.id, start_page=stepRoute.start_page) }}
 {{ Block.Group(blocks=stepRoute.blocks) }}
 </div>
