--- a/app/components/Input/Input.njk
+++ b/app/components/Input/Input.njk
@@ -1,6 +1,6 @@
 {% from '../FormGroup/FormGroup.njk' import FormGroup with context %}
 {% from '../ControlLabel/ControlLabel.njk' import ControlLabel with context %}
-{% macro Input(name, type='text', value='', label='', multiline=false, cols=80, rows=5) -%}
+{% macro Input(name, type='text', value='', label='', multiline=false, cols=80, rows=5, placeholder='') -%}
   {% set prefixedName = name %}
   {% if route._prefix %}{% set prefixedName = route._prefix + prefixedName %}{% endif %}
   {% call FormGroup(name, error=error) -%}
@@ -16,7 +16,7 @@
     {% if type === 'text' and multiline %}
       <textarea class="form-control" name="{{ prefixedName }}" id="{{ prefixedName }}" cols="{{ cols }}" rows="{{ rows }}">{{ value | safe }}</textarea>
     {% else %}
-      <input type="{{ type }}" class="form-control" name="{{ prefixedName }}" id="{{ prefixedName }}" value="{{ value | escape }}">
+      <input type="{{ type }}" class="form-control" name="{{ prefixedName }}" id="{{ prefixedName }}" value="{{ value | escape }}"{% if placeholder %} placeholder="{{ placeholder }}"{% endif %}>
     {% endif %}
   {%- endcall %}
 {%- endmacro %}
