--- a/app/templates/app-base/app-base.html
+++ b/app/templates/app-base/app-base.html
@@ -7,7 +7,7 @@
 {% from 'components/PhaseBanner/PhaseBanner.njk' import PhaseBanner with context %}
 {% from 'components/SupportLinks/SupportLinks.njk' import SupportLinks with context %}
 
-{% block page_title %}{{ getFormattedProp(route.id, 'heading') }}{% if route.id != 'route:index' %} - {{ getFormattedProp('route:index', 'heading') }}{% endif %}{% endblock %}
+{% block page_title %}{{ getFormattedProp(route.id, ['title', 'heading']) }}{% if route.id != route.homepage %} - {{ getFormattedProp(route.homepage, ['title', 'heading']) }}{% endif %}{% endblock %}
 
 {% block body_classes %}{{ route.template }}{% if req.disqualified %} disqualified{% endif %}{% endblock %}
 
@@ -50,7 +50,7 @@
 {% block grid_content %}
 {% block grid_content_prepend %}{% endblock %}
 <div class="{{ govukClassname('grid-row') }}">
-  <div class="{{ govukClassname('column-two-thirds') }}">
+  <div class="{{ govukClassname('column-two-thirds') }}"{% if edit %} id="contentTarget"{% endif %}>
   {% block grid_content_header %}
   {% set section_heading = getFormattedProp(route.id, 'section_heading', route.section_heading) %}
   <div class="grid_content_header">
