Investigate composite block handling

--- a/app/components/Control/Control.njk
+++ b/app/components/Control/Control.njk
@@ -1,5 +1,7 @@
 {% macro Control(name, _blockType='', value='', error='', label='', sublabel='', hint='', heading='', inline='', depth=2, skipDependencyCheck=false) -%}
-{% set outputControl = checkNoDependency(name, skipDependencyCheck) %}
+{% set prefixedName = name %}
+{% if route._prefix %}{% set prefixedName = route._prefix + prefixedName %}{% endif %}
+{% set outputControl = checkNoDependency(prefixedName, skipDependencyCheck) %}
 {% if outputControl %}
 {% set _blockType = getBlockProp(name, '_blockType', 'Text', { value: _blockType }) %}
 {% if Block[_blockType] %}
