--- a/app/components/Date/Date.njk
+++ b/app/components/Date/Date.njk
@@ -1,4 +1,17 @@
 {% from '../Input/Input.njk' import Input with context %}
-{% macro Date(name, value='', error='', label='', sublabel='', hint='') -%}
-  {{ Input(name) }}
+{% from '../Number/Number.njk' import Number with context %}
+{% from '../Fieldset/Fieldset.njk' import Fieldset with context %}
+{% macro Date(name, day='', month='', year='', label='') -%}
+    {% set prefixedName = name %}
+    {% if route._prefix %}{% set prefixedName = route._prefix + prefixedName %}{% endif %}
+  {% set error = getError(prefixedName) %}
+  <div class="form-group{% if error %} error{% endif %}"{% if name %} data-block-name="{{name}}"{% endif %}>
+  {% call Fieldset(name) %}
+    <div class="form-date">
+      {{ Input(name+'.day', type='number', label='Day', pattern='[0-9]*', min=0, max=31, controlError=true) }}
+      {{ Input(name+'.month', type='number', label='Month', pattern='[0-9]*', min=0, max=12) }}
+      {{ Input(name+'.year', type='number', label='Year', pattern='[0-9]*') }}
+    </div>
+  {% endcall %}
+  </div>
 {%- endmacro %}
